--- a/index.html
+++ b/index.html
@@ -37,5 +37,14 @@
     </div>
     <div class="text"><h1>India</h1></div>
 
+    <div class="m">
+            <div class="n"></div>
+            <div class="o"></div>
+            <div class="p"></div>
+            <div class="q"></div>
+            <div class="r"></div>
+            <div class="s"><img src="moon.png" alt="moon" width="300px" height="150px"></div>
+        </div>
+
 </body>
 </html>
