--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="p"></div>
             <div class="q"></div>
             <div class="r"></div>
-            <div class="s"><img src="moon.png" alt="moon" width="300px" height="150px"></div>
+            <div class="s"><img src="chanda.png" alt="moon" width="300px" height="150px"></div>
         </div>
 
 </body>
